default/monica/monica-noauth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/instance: monica
    app.kubernetes.io/name: monica
  name: monica-noauth
  namespace: default
spec:
  rules:
  - host: monica.eviljungle.com
    http:
      paths:
      - path: /dav
        pathType: Prefix
        backend:
          service:
            name: monica
            port:
              number: 80
  tls:
  - hosts:
    - monica.eviljungle.com
